<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.urvish.assignment7.RetrofitActivity">
    <EditText
        android:id="@+id/edittxtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="1"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittxtemail"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:imeOptions="actionGo"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_postdata"
        android:text="@string/post_data"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_8dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:padding="@dimen/_8dp"
        android:layout_margin="@dimen/_8dp"
        android:id="@+id/edit_id"
        android:maxLines="1"
        android:imeOptions="actionGo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_getdata"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        android:text="@string/get_data"/>

    <TextView
        android:id="@+id/txt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:visibility="invisible"
        android:layout_margin="@dimen/_8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        android:id="@+id/sendanalytics"
        android:text="@string/send_analytics"/>
</LinearLayout>
